k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-web
  template:
    metadata:
      labels:
        app: new-web
    spec:
      containers:
        - name: new-web
          image: mahmoudghanem/new-web:d241f2f85bf49f10c043e349e39885eac4d0c9c1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
